[package]
name = "sp1-hypercube-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-matrix = { workspace = true }
p3-field = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-fri = { workspace = true }
p3-dft = { workspace = true }
slop-koala-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-challenger = { workspace = true }
slop-uni-stark = { workspace = true }
slop-symmetric = { workspace = true }
sp1-topology = { workspace = true }
sp1-hypercube = { workspace = true }
sp1-primitives = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true
