[package]
name = "sp1-topology"
description = "Topological routing AIR for SP1"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
sp1-derive = { workspace = true }
slop-algebra = { workspace = true }
slop-air = { workspace = true }
p3-matrix = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-field = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-fri = { workspace = true }
p3-dft = { workspace = true }
slop-koala-bear = { workspace = true }
slop-challenger = { workspace = true }
slop-uni-stark = { workspace = true }
slop-symmetric = { workspace = true }
sp1-hypercube = { workspace = true }
sp1-primitives = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true
