[package]
name = "sp1-zkvm"
description = "The SP1 zkVM runtime and standard library"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cfg-if = { workspace = true }
getrandom_v2 = { workspace = true }
getrandom_v3 = { workspace = true }
rand = { workspace = true }
libm = { workspace = true, optional = true }
sha2 = { workspace = true }
lazy_static = { workspace = true }
embedded-alloc = { workspace = true }
critical-section = { workspace = true }

# optional
sp1-lib = { workspace = true, optional = true }
sp1-primitives = { workspace = true }
slop-algebra = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }

[target.'cfg(target_os = "zkvm")'.dependencies]
getrandom_v2 = { workspace = true, features = ["custom"] }
# getrandom v3 does not have a 'custom' feature, it uses 'register' which is handled differently.


[features]
default = ["libm", "lib"]
libm = ["dep:libm"]
lib = ["dep:sp1-lib"]
bump = []
verify = ["dep:slop-algebra", "sp1-lib/verify"]
blake3 = ["dep:blake3"]
untrusted_programs = []

[lints]
workspace = true
