[package]
name = "topology-script"
version = { workspace = true }
edition = { workspace = true }
default-run = "topology-script"
publish = false

[dependencies]
sp1-sdk = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"

[build-dependencies]
sp1-build = { workspace = true }

[[bin]]
name = "topology-script"
path = "src/main.rs"
